# nsfy

./: .gitignore  AGENTS.md  BUILDING-PACKAGES.md  CLAUDE.md  CLI.zh-CN.md  PERFORMANCE.md  README.de.md  README.fr.md  README.ja.md  README.md  README.zh-CN.md
.github/workflows/: build.yml  ci.yml  release.yml
android/: gradle.properties  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/nsfy/app/: MainActivity.kt  NsfyApp.kt
android/app/src/main/java/com/nsfy/app/cli/: CliCommands.kt  CliReceiver.kt
android/app/src/main/java/com/nsfy/app/data/db/: AppDatabase.kt  MessageDao.kt  MessageStateDao.kt  TopicDao.kt
android/app/src/main/java/com/nsfy/app/data/model/: Models.kt  NetworkClient.kt  NotificationPolicy.kt  SettingsBackup.kt  SettingsPreferences.kt  StateSyncProtocol.kt
android/app/src/main/java/com/nsfy/app/data/repository/: NsfyRepository.kt
android/app/src/main/java/com/nsfy/app/service/: BootReceiver.kt  StateSyncManager.kt  WebSocketService.kt
android/app/src/main/java/com/nsfy/app/ui/screens/: AndroidAdvancedSettings.kt  CategoryFilter.kt  NotificationSettingsSection.kt  NsfyMainScreen.kt  PublishScreen.kt  SettingsScreen.kt  TimelineScreen.kt  TopicDetailScreen.kt  TopicListScreen.kt  TrashDialog.kt
android/app/src/main/java/com/nsfy/app/ui/theme/: Theme.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/nsfy/app/data/model/: NotificationPolicyTest.kt  ServerUrlSecurityTest.java  StateSyncProtocolTest.kt
android/scripts/: build-package.ps1  nsfy-cli.ps1  run-tests.ps1
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/scripts/: build-installer.ps1
desktop/src/: App.svelte  app.css  main.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: cli.rs  cli_http.rs  config.rs  desktop_settings.rs  direct_http.rs  lib.rs  main.rs  tray.rs
desktop/src-tauri/tests/unit/: config.rs  desktop_settings.rs
desktop/src/lib/: AdvancedSettings.svelte  MessageActions.svelte  NotificationPopup.svelte  NotificationSettings.svelte  Publish.svelte  Settings.svelte  Timeline.svelte  TopicDetail.svelte  TopicList.svelte  message-format.ts  message-notifications.ts  notification-policy.ts  post-json.ts  server-url.ts  socket-client.ts  state-sync-wire.ts
desktop/src/lib/stores/: core-stores.ts  inbox-store.ts  message-actions.ts  message-state.ts  models.ts  nsfy.ts  preferences.ts  state-events.ts  state-persistence.ts  state-sync-client.ts  trash-store.ts
desktop/tests/: message-state.test.mjs  notification-policy.test.mjs  preferences.test.mjs  state-sync.test.mjs
scripts/: build-all-packages.ps1  check-release-version.ps1  check-source-lines.ps1
server/: Cargo.toml  topic-access.example.json
server/scripts/: run-performance.ps1
server/src/: access.rs  config.rs  handlers.rs  main.rs  message.rs  pubsub.rs  security.rs  state_store.rs  state_sync.rs  store.rs  ws.rs  ws_auth.rs
server/tests/: README.md  http_protocol.rs  network_security.rs  performance_http.rs  performance_stream.rs  performance_tls.rs  persistence.rs  state_sync_protocol.rs  stream_protocol.rs  topic_permissions.rs
server/tests/common/: mod.rs
server/tests/perf/: common.rs
server/tests/unit/: access.rs  pubsub.rs  security.rs  state_store.rs  store.rs  ws_auth.rs
slints/: Cargo.toml  README.md
slints/installer/: nsfy.iss
slints/scripts/: build-installer.ps1
slints/src/: config.rs  main.rs  notification.rs  ui_state.rs  websocket.rs
slints/tests/unit/: config.rs  websocket.rs
slints/ui/: app.slint  overlays.slint  theme.slint  tray.slint  types.slint
slints/ui/components/: common.slint  header.slint  message-card.slint  sidebar.slint
slints/ui/views/: settings-view.slint  timeline-view.slint  topic-view.slint
