[package]
name = "nsfyd"
version = "0.1.0"
edition = "2021"
description = "A minimal, high-performance pub-sub notification server — the nsfy backend"
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

dashmap = "6"
uuid = { version = "1", features = ["v4", "v7"] }

clap = { version = "4", features = ["derive", "env"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

chrono = { version = "0.4", features = ["serde"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
