[package]
name = "nsfyd"
version = "0.1.0"
edition = "2021"
description = "A minimal, high-performance pub-sub notification server — the nsfy backend"
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "catch-panic"] }

dashmap = "6"
uuid = { version = "1", features = ["v4", "v7"] }

clap = { version = "4", features = ["derive", "env"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

chrono = { version = "0.4", features = ["serde"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"

# Message persistence — bundled so there's no system sqlite3 dependency,
# just a bigger binary. Always compiled in; --db-path (unset by default)
# decides whether it's actually used at runtime.
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tempfile = "3"
tungstenite = "0.26"
sysinfo = "0.33"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
# Deliberately NOT panic = "abort": a panic in one request handler must not
# take down every other client's connection. CatchPanicLayer in main.rs
# converts a per-request panic into a 500 instead of a process exit, which
# only works with unwinding enabled.
