[package]
name = "nsfy-desktop-slint"
version = "0.1.0"
edition = "2021"
build = "build.rs"
publish = false

[dependencies]
slint = { version = "=1.17.1", default-features = false, features = [
  "std",
  "backend-winit",
  "renderer-software",
  "software-renderer-systemfonts",
  "accessibility",
  "compat-1-2",
  "system-tray",
] }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt", "sync", "time"] }
tokio-tungstenite = { version = "0.30.0", features = ["rustls-tls-native-roots"] }
url = "2.5.7"

[target.'cfg(windows)'.dependencies]
winrt-notification = "0.5.1"

[build-dependencies]
slint-build = "=1.17.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = true
panic = "abort"
