[package]
name = "nsfy-desktop"
version = "0.0.1-alpha"
edition = "2021"
default-run = "nsfy-desktop"

[[bin]]
name = "nsfy-desktop"
path = "src/main.rs"

[[bin]]
name = "nsfy-cli"
path = "src/bin/nsfy-cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
